# ComfyUI-Wrapper

./: .gitignore  INSTALLATION_COMPLETE.md  README.md  README_WORKSPACE.md  comfy.bat  comfy.sh  pyproject.toml  sync_windows.bat  wrapper_config.toml
.github/: copilot-instructions.md
envs/linux/: pyproject.toml
envs/windows/: pyproject.toml
scripts/: backup_env.py  cli.py  common.py  restore_env.py  run_comfy.py  show_structure.py  sync_wrapper.py  update_comfy.py
