[project]
name = "ComfyUI"
version = "0.10.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.14"
dependencies = [
    # Core ComfyUI dependencies (auto-synced from ComfyUI/requirements.txt)
    "comfyui-frontend-package==1.37.11",
    "comfyui-workflow-templates==0.8.15",
    "comfyui-embedded-docs==0.4.0",
    "torch",
    "torchsde",
    "torchvision",
    "torchaudio",
    "numpy>=1.25.0",
    "einops",
    "transformers>=4.50.3",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "Pillow",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "SQLAlchemy",
    "av>=14.2.0",
    "comfy-kitchen>=0.2.7",
    "kornia>=0.7.1",
    "spandrel",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    # Additional custom node dependencies (from wrapper_config.toml)
    "comfyui-manager>=4.0.5",
    "gitpython",
    "pygithub",
    "opencv-python",
    "opencv-python-headless",
    "onnxruntime",
    "onnxruntime-gpu",
    "hydra-core",
    "segment-anything",
    "matplotlib",
    "accelerate",
    "scikit-image",
    "scikit-learn",
    "insightface",
    "gdown",
    "deepdiff",
    "lark",
    "gguf",
    "groundingdino-py",
    "supervision",
    "ultralytics",
    "timm",
    "peft",
    "color-matcher",
    "piexif",
    "dill",
    "iopath",
    "diffusers",
    "torchlanc",
    "py-cpuinfo",
    "ftfy",
    "nvidia-ml-py",
    "imageio-ffmpeg",
    "sageattention>=1.0.6",
    "ninja",
    "edge-tts>=7.2.7",
    "pydub>=0.25.1",
    "srt>=3.5.3",
    "soundfile>=0.13.1",
    "kokoro-onnx>=0.5.0",
    "qwen-tts",
    "librosa>=0.11.0",
    "numba>=0.61.0",
    "snac>=1.2.1",
    "bitsandbytes>=0.43.0",  # For Orpheus 4-bit quantization
    "triton-windows>=3.6.0.post25",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
# Override PyTorch index (from wrapper_config.toml)
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[tool.uv]
# Exclude problematic packages that ComfyUI doesn't actually need
override-dependencies = [
    # flash-attn is very hard to build and ComfyUI works fine without it
]
